--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,6 +51,26 @@
             </form>
         </div>
 
+
+        {% if err %}
+        <div class="my-3 p-4 bg-white br-025rem border">
+            <div class="d-flex align-items-center lh-1">
+                <span class="icon d-block mr-2">
+                    <svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+							<g id="icon-shape">
+								<path d="M2.92893219,17.0710678 C6.83417511,20.9763107 13.1658249,20.9763107 17.0710678,17.0710678 C20.9763107,13.1658249 20.9763107,6.83417511 17.0710678,2.92893219 C13.1658249,-0.976310729 6.83417511,-0.976310729 2.92893219,2.92893219 C-0.976310729,6.83417511 -0.976310729,13.1658249 2.92893219,17.0710678 Z M15.6568542,15.6568542 C18.7810486,12.5326599 18.7810486,7.46734008 15.6568542,4.34314575 C12.5326599,1.21895142 7.46734008,1.21895142 4.34314575,4.34314575 C1.21895142,7.46734008 1.21895142,12.5326599 4.34314575,15.6568542 C7.46734008,18.7810486 12.5326599,18.7810486 15.6568542,15.6568542 Z M9,5 L11,5 L11,11 L9,11 L9,5 Z M9,13 L11,13 L11,15 L9,15 L9,13 Z" id="Combined-Shape"></path>
+							</g>
+						</g>
+					</svg>
+                </span>
+                <div>
+                    {{ err }}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+
         {% if city_data %}
         <div class="my-3 p-4 bg-white br-025rem border">
             <div class="d-flex align-items-center lh-1">
